[package]
name = "fltk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
espup = { git="https://github.com/esp-rs/espup.git", branch="feature/lib" }
fltk = "1.3.19"

[build-dependencies]
fl2rust = "0.4"
